updated md with a header title

--- a/ESR_2015.md
+++ b/ESR_2015.md
@@ -1,3 +1,14 @@
+---
+title: "Ecosystem Status Report (2015) for the Northeast Large Marine Ecosystem"
+output: 
+  pdf_document: 
+    keep_tex: yes
+header-includes: 
+   - \RequirePackage{accsupp}
+   - \RequirePackage{pdfcomment} 
+   - \newcommand{\AccTool}[2]{\BeginAccSupp{method=pdfstringdef,unicode,Alt={{#1}}}\pdftooltip{{#2}}{{#1}}\EndAccSupp{}} 
+---
+
 # Ecosystem Status Report for the Northeast Large Marine Ecosystem
 ## Main Findings 
 * The North Atlantic Oscillation, a major ecosystem driver in the North Atlantic Basin, underwent a strong reversal in 2010. We have experienced increased variability in the NAO over the last decade.
